updating map script

--- a/scripts/map.Rmd
+++ b/scripts/map.Rmd
@@ -33,7 +33,6 @@ library(here)
 # Read in a csv file that contains the latitude and longitude for each of the stations/sets
 temp_coords <- read_csv(here::here("raw", "temp_coords.csv"))
 spat_coords <- read_csv(here::here("raw", "all_coords.csv"))
-zoop_coords <- read_csv(here::here("raw", "zoop_coords.csv"))
 
 # Load North Pacific map data using the PBSmapping package from the Pacific Biological Station
 # in Nanaimo, Canada
@@ -53,59 +52,32 @@ GOAmap1 <- ggplot()+
         geom_polygon(data=nepacLLhigh, aes(long,lat,group=group), fill='grey90', size = 0.1, color="black")
 GOAmap1 
 ```
+
 ```{r}
-# Now zoom in a bit to create map of survey area, onto which we will plot the site locations
-#General Study Area for Introduction
-study_area1 <- GOAmap1 + coord_map(projection="gilbert") +
-        geom_ellipse(aes(x0 = -126.28, y0 = 50.48, a = 0.1, b = 0.45, angle = pi/2.25), size = 0.8, color = "grey30") +
-        geom_ellipse(aes(x0 = -125.05, y0 = 50.25, a = 0.5, b = 0.3, angle = pi/1.15), size = 0.8, color = "grey30") +
-        geom_point(aes(x = -123.2, y = 49.15), color = "dodgerblue4", size = 8, alpha = 0.6) +
-        geom_segment(aes(x = -126.3, xend = -127, y = 51, yend = 50.7), size = 0.3, color = "dodgerblue3") +
-        geom_segment(aes(x = -123.08, xend = -123.2, y = 49.6, yend = 49.15), size = 0.3, color = "dodgerblue3") +
-        geom_segment(aes(x = -123.3, xend = -123.56, y = 49.17, yend = 49.3), size = 1, color = "dodgerblue3", arrow = arrow(type = "open", length = unit(0.2, "cm"))) +
-        geom_segment(aes(x = -124.7, xend = -124.95, y = 49.8, yend = 49.95), size = 1, color = "dodgerblue3", arrow = arrow(type = "open", length = unit(0.2, "cm"))) +
-        geom_segment(aes(x = -127.5, xend = -127.7, y = 50.9, yend = 51), size = 1, color = "dodgerblue3", arrow = arrow(type = "open", length = unit(0.2, "cm"))) +
+# map of study sites focusing on D07 and J07
+stars <- spat_coords %>%
+        filter(site %in% c("D07", "J07"))
+
+
+spat_area1 <- GOAmap1 + coord_map(projection="gilbert") +
+        geom_point(data = spat_coords, aes(x = long, y = lat), size = 2) +
+        geom_point(data = stars, aes(x = long, y = lat), size = 4, fill = "red", shape = 23) +
+        #geom_text(data = spat_coords, aes(x = long, y = lat, label = site), size = 2, hjust=-0.5, vjust=-1, fontface = "bold") +
+        geom_ellipse(aes(x0 = -126.2, y0 = 50.47, a = 0.1, b = 0.66, angle = pi/2.25), size = 0.5, color = "grey30") +
+        geom_ellipse(aes(x0 = -125.05, y0 = 50.23, a = 0.45, b = 0.275, angle = 0), size = 0.5, color = "grey30") +
         theme_bw() +
         theme(
                 axis.text=element_text(size=10, color="black"),
-                axis.title=element_blank(),
+                axis.title=element_text(size=10),
                 panel.grid = element_blank(),
                 plot.background = element_rect(fill = "white")
         ) +
-  theme_inset() +
-        coord_cartesian(xlim = c(-128.27, -123), ylim=c(48.4, 51.2)) +
-        annotate("text", x = -123.87, y = 49.37, label = "Strait of\nGeorgia", color = "dodgerblue4", size = 2.9, lineheight = 0.8, fontface = "italic") +
-        annotate("text", x = -126.1, y = 51.1, label = "Queen\nCharlotte\nStrait", color = "dodgerblue4", size = 2.9, lineheight = 0.8, fontface = "italic") +
-        annotate("text", x = -128.1, y = 51.1, label = "Queen\nCharlotte\nSound", color = "dodgerblue4", size = 2.9, lineheight = 0.8, fontface = "italic") +
-        annotate("text", x = -127.5, y = 49, label = "Pacific\nOcean", color = "dodgerblue4", size = 3.5, lineheight = 0.8, fontface = "italic") +
-        annotate("text", x = -125.5, y = 49.5, label = "Vancouver\nIsland", color = "grey30", size = 3.5, lineheight = 0.9) +
-        annotate("text", x = -123.7, y = 50.8, label = "Mainland\nBritish Columbia", color = "grey30", size = 3.5, lineheight = 0.9) +
-        annotate("label", x = -125.9, y = 50, label = "Discovery Islands", color = "grey30", size = 3) +
-        annotate("label", x = -126.75, y = 50.3, label = "Johnstone Strait", color = "grey30", size = 3) +
-        annotate("text", x = -123.08, y = 49.8, label = "Fraser\nRiver\nOutflow", color = "dodgerblue4", size = 2.9, lineheight = 0.8)
-        
-study_area1
-#ggsave("study_area_bigscale2.png", path = "./figs/map", width = 16, height = 12, units = "cm", dpi = 300, type = "cairo")
-
-
-study_area2 <- GOAmap1 + coord_map(projection="gilbert") +
-        geom_point(data = spat_coords, aes(x = long, y = lat), size = 1.5) +
-        #geom_point(data = zoop_coords, aes(x = long, y = lat), pch = 10, size = 3, col = "dodgerblue4") +
-        geom_ellipse(aes(x0 = -126.36, y0 = 50.48, a = 0.1, b = 0.5, angle = pi/2.25), size = 0.8, color = "grey30") +
-        geom_ellipse(aes(x0 = -125.1, y0 = 50.28, a = 0.5, b = 0.25, angle = -0.1), size = 0.8, color = "grey30") +
-        theme_bw() +
-        theme(
-                axis.text=element_text(size=10, color="black"),
-                axis.title=element_blank(),
-                panel.grid = element_blank(),
-                plot.background = element_rect(fill = "white")
-        ) +
-        #theme_inset() +
-        coord_cartesian(xlim = c(-127.35, -124.5), ylim=c(49.5, 50.8)) +
-        north(x.min = -124.6, x.max = -124.4, 
-              y.min = 50.73, y.max = 50.83, scale = 1.5, symbol = 3) + 
-        scalebar(x.min = -125.4, x.max = -124.5, 
-                 y.min = 49.52, y.max = 49.57, 
+        labs(y = "Latitude", x = "Longitude") +
+        coord_cartesian(xlim = c(-127, -124.5), ylim=c(49.8, 51)) +
+        north(x.min = -124.7, x.max = -124.5, 
+              y.min = 50.85, y.max = 51, scale = 1.5, symbol = 3) + 
+        scalebar(x.min = -126.3, x.max = -125.4, 
+                 y.min = 49.8, y.max = 49.85, 
                  dist = 25, dist_unit="km", dd2km = TRUE, transform = FALSE,
                  model = "WGS84", height = 0.5, 
                  st.dist = 0.5,
@@ -113,39 +85,32 @@ study_area2 <- GOAmap1 + coord_map(projection="gilbert") +
                  st.color = "grey30",
                  border.size = 0.5,
                  st.size = 3.5) +
-        annotate("text", x = -124.88, y = 49.85, label = "Northern Strait\nof Georgia", color = "dodgerblue4", size = 3, fontface = "italic") +
-        annotate("text", x = -127.1, y = 50.74, label = "Queen\nCharlotte\nStrait", color = "dodgerblue4", size = 3, fontface = "italic") +
-        annotate("label", x = -124.57, y = 50.05, label = "Discovery\nIslands", color = "grey30", size = 4) +
-        annotate("label", x = -126.1, y = 50.3, label = "Johnstone Strait", color = "grey30", size = 4) +
-        annotate("label", x = -126.9, y = 50.53, label = "J09", size = 3) +
-        annotate("label", x = -126.77, y = 50.66, label = "J02", size = 3) +
-        annotate("label", x = -126.6, y = 50.47, label = "J08", size = 3) +
-        annotate("label", x = -126.3, y = 50.45, label = "J07", size = 3) +
-        annotate("label", x = -126.15, y = 50.52, label = "J06", size = 3) +
-        annotate("label", x = -126.5, y = 50.55, label = "J04", size = 3) +
-        annotate("label", x = -125.41, y = 50.1, label = "D06", size = 3) +
-        annotate("label", x = -125.26, y = 50.2, label = "D07", size = 3) +
-        annotate("label", x = -125.15, y = 50.35, label = "D08", size = 3) +
-        annotate("label", x = -125.45, y = 50.3, label = "D09", size = 3) +
-        annotate("label", x = -125.4, y = 50.49, label = "D10", size = 3) +
-        annotate("label", x = -125.5, y = 50.4, label = "D11", size = 3)
-study_area2
-
-#Combining larger map with spatial inset for TGH map
-# Run this whole piece of code to generate map with inset and save in your file folder
-tiff(filename = "./figs/map/map1.tiff", width = 7, height = 6, units = "in", res = 300, type = "cairo") #'cairo' smooths the pixelated edges of curved lines in your figures
-# create a viewport for inset
-# vp_inset width/height arguments set the size of the inset; x and y arguments set the position (from 0 to 1) of the left, top corner of the inset along each axis (i.e. not map coordinates as you have in your annotation custom). You can adjust these as you see fit.
-vp_inset <- grid::viewport(width = 0.5, height = 0.5, x = 0.065, y = 0.055, just = c("left", "bottom"))
-print(study_area2)
-print(study_area1, vp = vp_inset)
-dev.off()
+        annotate("text", x = -124.85, y = 49.85, label = "Strait of\nGeorgia", color = "dodgerblue4", size = 3.5, fontface = "italic") +
+        annotate("text", x = -126.98, y = 50.74, label = "Queen\nCharlotte\nStrait", color = "dodgerblue4", size = 3.5, fontface = "italic") +
+        annotate("text", x = -125.9, y = 50, label = "Vancouver Island", color = "grey30", size = 5) +
+        annotate("text", x = -125.25, y = 50.9, label = "Mainland\nBritish\nColumbia", color = "grey30", size = 5) +
+        annotate("label", x = -124.8, y = 50.54, label = "Discovery Islands", color = "grey30", size = 4) +
+        annotate("label", x = -125.8, y = 50.58, label = "Johnstone Strait", color = "grey30", size = 4) +
+        annotate("text", x = -126.9, y = 50.53, label = "J09", size = 3.7) +
+        annotate("text", x = -126.82, y = 50.64, label = "J02", size = 3.7) +
+        annotate("text", x = -126.59, y = 50.48, label = "J08", size = 3.7) +
+        annotate("text", x = -126.29, y = 50.45, label = "J07", size = 3.7) +
+        annotate("text", x = -126.14, y = 50.52, label = "J06", size = 3.7) +
+        annotate("text", x = -126.5, y = 50.55, label = "J04", size = 3.7) +
+        annotate("text", x = -125.41, y = 50.13, label = "D06", size = 3.7) +
+        annotate("text", x = -125.26, y = 50.22, label = "D07", size = 3.7) +
+        annotate("text", x = -125.15, y = 50.35, label = "D08", size = 3.7) +
+        annotate("text", x = -125.45, y = 50.3, label = "D09", size = 3.7) +
+        annotate("text", x = -125.4, y = 50.49, label = "D10", size = 3.7) +
+        annotate("text", x = -125.5, y = 50.4, label = "D11", size = 3.7)
+spat_area1
+ggsave("spat_area.png", path = "../figs/map", width = 16, height = 12, units = "cm", dpi = 300)
 
 ```
 
 ```{r}
-#inset map of the BC coast
-study_area2 <- GOAmap1 + coord_map(projection="gilbert") +
+# inset map
+BC_area2 <- GOAmap1 + coord_map(projection="gilbert") +
         theme_bw() +
         theme(
                 axis.text=element_blank(),
@@ -154,10 +119,22 @@ study_area2 <- GOAmap1 + coord_map(projection="gilbert") +
                 plot.background = element_rect(fill = "white")
         ) +
         coord_cartesian(xlim = c(-135, -122), ylim=c(47, 58)) +
-        annotate(geom = "rect", ymax = 51.5, ymin = 49, xmax = -123, xmin = -128.5, colour = "red", fill = NA, size = 1) +
-        theme_inset() +
-        annotate("text", x = -132, y = 49, label = "North Pacific\nOcean", color = "dodgerblue4", size = 3.5, fontface = "italic") +
-        annotate("text", x = -126, y = 56, label = "British\nColumbia", color = "grey30", size = 4)
-study_area2
+        annotate(geom = "rect", ymax = 50.8, ymin = 49.9, xmax = -124.5, xmin = -126.5, colour = "red", fill = NA, size = 1) +
+        annotate("text", x = -131.5, y = 48.9, label = "North Pacific\nOcean", color = "dodgerblue4", size = 3, fontface = "italic") +
+        annotate("text", x = -125.9, y = 56, label = "British\nColumbia", color = "grey30", size = 4) +
+        theme_inset()
+BC_area2
+
+```
+
+```{r}
+# Combining into one figure
+png(file = "../figs/map/Fig1_site_map.png", width = 7, height = 5, units = "in", res = 300, type = "cairo")
+# create a viewport for inset
+# vp_inset width/height arguments set the size of the inset; x and y arguments set the position (from 0 to 1) of the left, top corner of the inset along each axis (i.e. not map coordinates as you have in your annotation custom). You can adjust these as you see fit.
+vp_inset <- grid::viewport(width = 0.22, height = 0.4, x = 0.1, y = 0.1, just = c("left", "bottom"))
+print(spat_area1)
+print(BC_area2, vp = vp_inset)
+dev.off()
 ```
 
